Разделение категорий и соответствующих экранов на две сущности

--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -5,6 +5,9 @@ Transaction.description = Description
 Transaction.name = Name
 Transaction = Transaction
 Transaction.category = Category
+Transaction.direction = Direction
 Category.name = Name
 Category = Category
 Category.parent = Parent
+CatIncome = Cat Income
+CatSpend = Cat Spend
