--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
@@ -13,3 +13,6 @@ menu-config.yaap$Transaction.browse = Transactions
 menu-config.yaap$Transaction.income = Transaction.income
 menu-config.yaap$Transaction.spend = Transaction.spend
 menu-config.Transactions = Transactions
+menu-config.yaap$CatIncome.browse = Incomes
+menu-config.yaap$CatSpend.browse = Spends
+menu-config.Categories = Categories
