--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages_ru.properties
@@ -1,4 +1,4 @@
-application.welcomeText = Добро пожаловать в "Yaap - очередная бухгалтерия"
+application.welcomeText = Добро пожаловать в \"Yaap - очередная бухгалтерия\"
 application.caption = Yaap
 application.logoLabel = YAAP
 loginWindow.caption = Yaap login
@@ -10,3 +10,6 @@ menu-config.yaap$Transaction.browse = Все операции
 menu-config.yaap$Transaction.income = Доходы
 menu-config.yaap$Transaction.spend = Расходы
 menu-config.Transactions = Операции
+menu-config.Categories = Категории
+menu-config.yaap$CatIncome.browse = Категории доходов
+menu-config.yaap$CatSpend.browse = Категории расходов
