--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
@@ -3,3 +3,4 @@ editorCaption = Редактор операции
 incomeCaption = Доходы
 spendOperation = Расходы
 notZero = Нельзя указать нулевое значение
+actionCreate = Добавить
