сущности Аккаунт и Баланс, мелкие правки в части перевода и экранов

--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -6,8 +6,14 @@ Transaction.name = Name
 Transaction = Transaction
 Transaction.category = Category
 Transaction.direction = Direction
+Transaction.date = Date
 Category.name = Name
 Category = Category
 Category.parent = Parent
 CatIncome = Cat Income
 CatSpend = Cat Spend
+Account = Account
+Account.name = Name
+Account.currency = Currency
+Balance.current = Current
+Balance = Balance
