--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
@@ -3,4 +3,6 @@ editorCaption = Редактор операции
 incomeCaption = Доходы
 spendOperation = Расходы
 notZero = Нельзя указать нулевое значение
-actionCreate = Добавить
+actionCreate = Добавить расход
+onlyPast = Вы можете внести покупку только за более ранние даты
+addCheck = Добавить чек
