--- a/_roadmap.org
+++ b/_roadmap.org
@@ -1,19 +1,23 @@
-* Добавить дату совершения транзакции
+* DONE Добавить дату совершения транзакции
   По умолчанию - дата введения транзакции, но можно изменить в меньшую сторону
   Валидация - нельзя установить дату больше сегодняшней
 
-* На экране всех транзакций подкрасить + и -
-  Отображать в обратном хронологическом порядке
+* DONE На экране всех транзакций 
+** DONE Подкрасить + и -
+** DONE Отображать в обратном хронологическом порядке
 
-* Добавить возможность вбивать несколько транзакций для одного магазина
-  Возможно форма "добавить чек, где можно будет указать магаз и несколько товаров"
+* TODO Добавить возможность 
+** TODO Вбивать несколько транзакций для одного магазина
+** TODO Возможно форма "добавить чек, где указать магаз, дату и несколько товаров"
+** TODO Вбивать несколько чеков за определённую дату
 
-* Добавить аккаунт, привязать транзакции к аккаунту
-  Многопользовательское веб-приложение
+* TODO Добавить аккаунт
+** TODO привязать транзакции к аккаунту
+** TODO Многопользовательское веб-приложение
 
-* Баланс + архив
-  Пересчитывать баланс относительно последнего архивного
-  Архив делать каждый месяц
-  При попытке Добавить или изменить архивные транзакции 
-    предупреждать о том, что это может занять какое то время
-	предупредить, какие статистики отчёты и графики будут изменены
+* TODO Баланс + архив
+** TODO Пересчитывать баланс относительно последнего архивного
+** TODO Архив делать каждый месяц
+** TODO При попытке Добавить или изменить архивные транзакции 
+*** TODO предупреждать о том, что это может занять какое то время
+*** TODO предупредить, какие статистики отчёты и графики будут изменены
