--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages.properties
@@ -3,4 +3,6 @@ editorCaption = Transaction editor
 notZero = Can not be zero
 incomeCaption = Income
 spendOperation = Spend
-actionCreate = Create
+actionCreate = Add a spend
+onlyPast = You can only set earlier dates
+addCheck = Add Check
