Новые, пока пустые сущности Аккаунт и Баланс. Первый отзыв о приложении, отметки в _roadmap

--- a/_roadmap.org
+++ b/_roadmap.org
@@ -5,19 +5,30 @@
 * DONE На экране всех транзакций 
 ** DONE Подкрасить + и -
 ** DONE Отображать в обратном хронологическом порядке
-
-* TODO Добавить возможность 
-** TODO Вбивать несколько транзакций для одного магазина
-** TODO Возможно форма "добавить чек, где указать магаз, дату и несколько товаров"
+* TODO В транзакции в доходе убрать наименование
+* TODO В браузере доходов кнопка добавления изменить на добавить доход
+** TODO В редакторе доходов убрать наименование (в бд сделать пустую строку)
+* TODO Сделать всплывающий выбор категорий и доход и расход
+* TODO В браузере расходов поменять местами наименование и категорию
+* TODO Добавить возможность добавлять расходы и доходы прямо в таблице
+* TODO редактор - для продуктов добавить поле объём и автоматически рассчитывать цену
+** Сумма = сумма по чеку
+** Количество = количество упаковок/пачек/пакетов
+** Объём/вес = сколько в одной упаковке
+** TODO Добавить колонку с ценой (мета проперти)
+* TODO При смене вкладок - обновлять информацию на вкладке
+* TODO В категориях сменить создать на добавить
+* TODO Отказаться от формы создания единичной операции
+* TODO Добавить форму "добавить чек, где указать магаз, дату и несколько товаров"
 ** TODO Вбивать несколько чеков за определённую дату
-
 * TODO Добавить аккаунт
 ** TODO привязать транзакции к аккаунту
+** TODO Возможность создавать аккаунты для одного пользователя, общий баланс
 ** TODO Многопользовательское веб-приложение
-
 * TODO Баланс + архив
 ** TODO Пересчитывать баланс относительно последнего архивного
 ** TODO Архив делать каждый месяц
 ** TODO При попытке Добавить или изменить архивные транзакции 
 *** TODO предупреждать о том, что это может занять какое то время
 *** TODO предупредить, какие статистики отчёты и графики будут изменены
+* TODO Добавить футер или информацию в боковое меню с общим текущим балансом
