Незначительные правки внешнего вида, переименования кнопок и колонок таблиц. Переименование страницы приложения и смена порта. Отказ от создания единичной операции  для расхода

--- a/_roadmap.org
+++ b/_roadmap.org
@@ -5,20 +5,19 @@
 * DONE На экране всех транзакций 
 ** DONE Подкрасить + и -
 ** DONE Отображать в обратном хронологическом порядке
-* TODO В транзакции в доходе убрать наименование
-* TODO В браузере доходов кнопка добавления изменить на добавить доход
-** TODO В редакторе доходов убрать наименование (в бд сделать пустую строку)
+* DONE В браузере доходов кнопка добавления изменить на добавить доход
+** DONE В редакторе доходов убрать наименование (в бд сделать пустую строку)
 * TODO Сделать всплывающий выбор категорий и доход и расход
-* TODO В браузере расходов поменять местами наименование и категорию
+* DONE В браузере расходов поменять местами наименование и категорию
 * TODO Добавить возможность добавлять расходы и доходы прямо в таблице
 * TODO редактор - для продуктов добавить поле объём и автоматически рассчитывать цену
-** Сумма = сумма по чеку
-** Количество = количество упаковок/пачек/пакетов
-** Объём/вес = сколько в одной упаковке
+  - Сумма = сумма по чеку
+  - Количество = количество упаковок/пачек/пакетов
+  - Объём/вес = сколько в одной упаковке
 ** TODO Добавить колонку с ценой (мета проперти)
 * TODO При смене вкладок - обновлять информацию на вкладке
-* TODO В категориях сменить создать на добавить
-* TODO Отказаться от формы создания единичной операции
+* DONE В категориях сменить создать на добавить
+* DONE Отказаться от формы создания единичной операции
 * TODO Добавить форму "добавить чек, где указать магаз, дату и несколько товаров"
 ** TODO Вбивать несколько чеков за определённую дату
 * TODO Добавить аккаунт
