Обновлениие модели данных, гитигнора, Скриптов создания БД,

--- a/_roadmap.org
+++ b/_roadmap.org
@@ -7,17 +7,15 @@
 ** DONE Отображать в обратном хронологическом порядке
 * DONE В браузере доходов кнопка добавления изменить на добавить доход
 ** DONE В редакторе доходов убрать наименование (в бд сделать пустую строку)
-* TODO Сделать всплывающий выбор категорий и доход и расход
 * DONE В браузере расходов поменять местами наименование и категорию
-* TODO Добавить возможность добавлять расходы и доходы прямо в таблице
+* DONE В категориях сменить создать на добавить
+* DONE Отказаться от формы создания единичной операции
+* TODO Сделать всплывающий выбор категорий и доход и расход
 * TODO редактор - для продуктов добавить поле объём и автоматически рассчитывать цену
   - Сумма = сумма по чеку
   - Количество = количество упаковок/пачек/пакетов
   - Объём/вес = сколько в одной упаковке
 ** TODO Добавить колонку с ценой (мета проперти)
-* TODO При смене вкладок - обновлять информацию на вкладке
-* DONE В категориях сменить создать на добавить
-* DONE Отказаться от формы создания единичной операции
 * TODO Добавить форму "добавить чек, где указать магаз, дату и несколько товаров"
 ** TODO Вбивать несколько чеков за определённую дату
 * TODO Добавить аккаунт
@@ -25,9 +23,18 @@
 ** TODO Возможность создавать аккаунты для одного пользователя, общий баланс
 ** TODO Многопользовательское веб-приложение
 * TODO Баланс + архив
+** TODO Entity Period
+   список всех транзакций, 
+   балансы на начало, и на конец периода. 
+   Дата начала, дата окончания периода. 
+** TODO В Аккаунте есть, имя, текущий период, и спсиок архивных периодов. Текущий баланс считается из всех архивных периодов + текущий. 
+** TODO При добавлении транзакции считаем, не нужно ли открыть новый период.
+** TODO Добавить возможность настроить начало нового периода
 ** TODO Пересчитывать баланс относительно последнего архивного
 ** TODO Архив делать каждый месяц
 ** TODO При попытке Добавить или изменить архивные транзакции 
 *** TODO предупреждать о том, что это может занять какое то время
 *** TODO предупредить, какие статистики отчёты и графики будут изменены
 * TODO Добавить футер или информацию в боковое меню с общим текущим балансом
+* TODO При смене вкладок - обновлять информацию на вкладке
+* TODO Добавить возможность добавлять расходы и доходы прямо в таблице
