Добавление сущности "Период", доработка сущости "Аккаунт", базово создано окно добавления чека

--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -7,6 +7,8 @@ Transaction = Transaction
 Transaction.category = Category
 Transaction.direction = Direction
 Transaction.date = Date
+Transaction.period = Period
+Transaction.volume = Volume
 Category.name = Name
 Category = Category
 Category.parent = Parent
@@ -15,5 +17,12 @@ CatSpend = Cat Spend
 Account = Account
 Account.name = Name
 Account.currency = Currency
-Balance.current = Current
-Balance = Balance
+Account.currentPeriod = Current period
+Account.archive = Archive
+Period = Period
+Period.dateStart = Date start
+Period.dateEnd = Date end
+Period.balanceStart = Current
+Period.balanceEnd = Balance end
+Period.trxs = Trxs
+Period.account = Account
