--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages_ru.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages_ru.properties
@@ -8,3 +8,5 @@ Transaction.source = Компания
 Transaction.total = Сумма
 Transaction.amount = Количество
 Transaction.description = Описание
+Transaction.date = Дата
+Transaction.volume = Объём
