--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
@@ -16,3 +16,4 @@ menu-config.Transactions = Transactions
 menu-config.yaap$CatIncome.browse = Incomes
 menu-config.yaap$CatSpend.browse = Spends
 menu-config.Categories = Categories
+menu-config.oneCheckEditor = One Check Editor
