Компания и Название трат/доходов - как сущности

--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -26,3 +26,7 @@ Period.balanceStart = Current
 Period.balanceEnd = Balance end
 Period.trxs = Trxs
 Period.account = Account
+Company.name = Name
+Company = Company
+Product.name = Name
+Product = Product
