--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages.properties
@@ -6,3 +6,4 @@ spendOperation = Spend
 actionCreate = Add an income
 onlyPast = You can only set earlier dates
 addCheck = Add Check
+source = Source
