--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
@@ -6,3 +6,4 @@ notZero = Нельзя указать нулевое значение
 actionCreate = Добавить доход
 onlyPast = Вы можете внести покупку только за более ранние даты
 addCheck = Добавить чек
+source = Компания
