--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
@@ -17,3 +17,4 @@ menu-config.yaap$CatIncome.browse = Incomes
 menu-config.yaap$CatSpend.browse = Spends
 menu-config.Categories = Categories
 menu-config.oneCheckEditor = One Check Editor
+menu-config.yaap$Company.browse = Companies
