базовое добавление новой строки

--- a/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages.properties
@@ -12,3 +12,6 @@ lblVolume = Volume
 lblEnum = #
 btnAddRow = Add Row
 balance=Balance
+btnCancel = Cancel
+btnSave = Save
+onlyPast=You can only set earlier dates
