--- a/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages_ru.properties
@@ -12,3 +12,6 @@ lblVolume = Объём
 lblEnum = №
 btnAddRow = Добавить строку
 balance=Баланс
+btnCancel = Отмена
+btnSave = Сохранить
+onlyPast=Вы можете внести покупку только за более ранние даты
