Форма "одна строка заказа"

--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
@@ -18,3 +18,4 @@ menu-config.yaap$CatSpend.browse = Spends
 menu-config.Categories = Categories
 menu-config.oneCheckEditor = One Check Editor
 menu-config.yaap$Company.browse = Companies
+menu-config.yaap$Product.browse = Products
