--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages_ru.properties
@@ -14,3 +14,4 @@ menu-config.Categories = Категории
 menu-config.yaap$CatIncome.browse = Категории доходов
 menu-config.yaap$CatSpend.browse = Категории расходов
 menu-config.yaap$Company.browse = Компании
+menu-config.yaap$Product.browse = Продукты
