Добавил Аккаунт на стартовый экран, сервис подсчёта баланса

--- a/_roadmap.org
+++ b/_roadmap.org
@@ -1,22 +1,10 @@
-* DONE Добавить дату совершения транзакции
-  По умолчанию - дата введения транзакции, но можно изменить в меньшую сторону
-  Валидация - нельзя установить дату больше сегодняшней
-
-* DONE На экране всех транзакций 
-** DONE Подкрасить + и -
-** DONE Отображать в обратном хронологическом порядке
-* DONE В браузере доходов кнопка добавления изменить на добавить доход
-** DONE В редакторе доходов убрать наименование (в бд сделать пустую строку)
-* DONE В браузере расходов поменять местами наименование и категорию
-* DONE В категориях сменить создать на добавить
-* DONE Отказаться от формы создания единичной операции
 * TODO Сделать всплывающий выбор категорий и доход и расход
 * TODO редактор - для продуктов добавить поле объём и автоматически рассчитывать цену
   - Сумма = сумма по чеку
   - Количество = количество упаковок/пачек/пакетов
   - Объём/вес = сколько в одной упаковке
 ** TODO Добавить колонку с ценой (мета проперти)
-* TODO Добавить форму "добавить чек, где указать магаз, дату и несколько товаров"
+* DONE Добавить форму "добавить чек, где указать магаз, дату и несколько товаров"
 ** TODO Вбивать несколько чеков за определённую дату
 * TODO Добавить аккаунт
 ** TODO привязать транзакции к аккаунту
