--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -19,6 +19,7 @@ Account.name = Name
 Account.currency = Currency
 Account.currentPeriod = Current period
 Account.archive = Archive
+Account.owner = Owner
 Period = Period
 Period.dateStart = Date start
 Period.dateEnd = Date end
