--- a/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/messages.properties
@@ -19,3 +19,4 @@ menu-config.Categories = Categories
 menu-config.oneCheckEditor = One Check Editor
 menu-config.yaap$Company.browse = Companies
 menu-config.yaap$Product.browse = Products
+menu-config.yaap$Account.browse = Accounts
