Аккаунт по умолчанию

--- a/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
+++ b/modules/global/src/ru/iovchinnikov/yaap/entity/messages.properties
@@ -20,6 +20,7 @@ Account.currency = Currency
 Account.currentPeriod = Current period
 Account.archive = Archive
 Account.owner = Owner
+Account.isDefault = Is default
 Period = Period
 Period.dateStart = Date start
 Period.dateEnd = Date end
