--- a/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages.properties
@@ -16,3 +16,4 @@ btnSave = Save
 onlyPast=You can only set earlier dates
 addAcc=Add account
 reLogin=Changes will be seen after next login
+lblAccount=Account
