--- a/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/screens/messages_ru.properties
@@ -16,3 +16,4 @@ btnSave = Сохранить
 onlyPast=Вы можете внести покупку только за более ранние даты
 addAcc=Добавить аккаунт
 reLogin=Изменения станут видны после следующего входа в систему
+lblAccount= Аккаунт
