установка аккаунта по умолчанию

--- a/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
+++ b/modules/web/src/ru/iovchinnikov/yaap/web/transaction/messages_ru.properties
@@ -7,3 +7,4 @@ actionCreate = Добавить доход
 onlyPast=Вы можете внести доход только за более ранние даты
 addCheck = Добавить чек
 source = Компания
+account = Аккаунт
